# poc-fitness-assistant-ai

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.dev.yml  sqlx.toml
backend/: Cargo.toml
backend/migrations/: 20241229000001_create_users.sql  20241229000002_create_weight_logs.sql  20241229000003_extend_user_profile.sql  20241229000004_create_nutrition.sql  20241229000005_create_exercise.sql  20241229000006_seed_exercises.sql  20241229000007_create_hydration.sql  20241229000008_create_sleep.sql  20241229000009_create_biometrics.sql  20241229000010_create_goals.sql  20241229000011_create_biomarkers.sql
backend/proptest-regressions/routes/: auth_tests.txt
backend/proptest-regressions/services/: biometrics.txt  nutrition.txt
backend/src/: error.rs  lib.rs  main.rs  state.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/repositories/: biomarkers.rs  biometrics.rs  exercise.rs  goals.rs  hydration.rs  mod.rs  nutrition.rs  sleep.rs  user.rs  weight.rs
backend/src/routes/: auth.rs  auth_tests.rs  biomarkers.rs  biometrics.rs  exercise.rs  export.rs  goals.rs  health.rs  hydration.rs  mod.rs  nutrition.rs  profile.rs  sleep.rs  weight.rs  weight_tests.rs
backend/src/services/: biomarkers.rs  biometrics.rs  data.rs  exercise.rs  export.rs  goals.rs  hydration.rs  insights.rs  mod.rs  nutrition.rs  profile.rs  sleep.rs  user.rs  weight.rs
backend/tests/: auth_integration_test.rs  health_test.rs  nutrition_integration_test.rs  profile_integration_test.rs  weight_integration_test.rs
backend/tests/common/: mod.rs
config/: development.toml  production.toml  shared.toml
scripts/: dev-setup.sh
shared/: Cargo.toml
shared/src/: errors.rs  health_metrics.rs  lib.rs  models.rs  types.rs  units.rs  validation.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
