[workspace]
resolver = "2"
members = [
    "backend",
    "shared",
    "wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Fitness Assistant AI Team"]
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }

# Web framework
axum = { version = "0.7", features = ["macros", "tracing"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "request-id", "timeout", "limit"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate", "rust_decimal"] }
rust_decimal = { version = "1.33", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"
argon2 = "0.5"  # More secure password hashing for production

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Metrics and observability
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Testing
proptest = "1.4"
tokio-test = "0.4"
wiremock = "0.6"
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }
rstest = "0.18"

# Security
secrecy = { version = "0.8", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true

# Faster incremental builds
[profile.dev.package."*"]
opt-level = 2
