[package]
name = "fitness-assistant-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "fitness_assistant_backend"
path = "src/lib.rs"

[[bin]]
name = "fitness-assistant-backend"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
csv.workspace = true
config.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true
argon2.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
redis.workspace = true
validator.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
secrecy.workspace = true

# Shared crate
fitness-assistant-shared = { path = "../shared" }

# Additional dependencies
dotenvy = "0.15"
toml = "0.8"
async-trait = "0.1"
once_cell = "1.19"

[dev-dependencies]
proptest.workspace = true
tokio-test.workspace = true
wiremock.workspace = true
fake.workspace = true
rstest.workspace = true

[features]
default = []
# Enable for integration tests that need a real database
integration = []
