[package]
name = "fitness-assistant-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
validator.workspace = true
regex-lite = "0.1"

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true
fake.workspace = true
