[package]
name = "fitness-assistant-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fitness-assistant-shared = { path = "../shared" }
serde.workspace = true
serde_json.workspace = true
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
